	WebPMemoryWriter as part of the EXIF and ICC profile support
	addition (enabled with libwebp 0.5.0), the progress indicator
	callback is now passed a pointer to a wrong structure.  This is
	quite unfortunate since the progress indication is useful.  The
	progress indication is temporarily disabled when the
	WebPMemoryWriter is in use until a solution is implemented.

	* coders/png.c (ReadMNGImage): Fix SourceForge issue #537 "null
	pointer dereference in ReadMNGImage".  DEFI chunk must be at least
	2 bytes long.

	* coders/tiff.c (ReadNewsProfile): Fix SourceForge issue #533
	"heap-buffer-overflow on LocaleNCompare".  LocaleNCompare() was
	being allowed to read heap data beyond the allocated region.

2017-12-17  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/shear.c (IntegralRotateImage): Assure that reported error
	in rotate by 270 case does immediately terminate processing.
	Return a NULL Image pointer if there is a problem rather than a
	corrupted image.  Fix is related to SourceForge issue #532
	"heap-buffer-overflow bug in ReadWPGImage".

	* magick/pixel_cache.c (AcquireCacheNexus): Add a check that the
	pixel cache is compatible with the image dimensions.  Fix is
	related to SourceForge issue #532 "heap-buffer-overflow bug in
	ReadWPGImage".

2017-12-16  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/png.c (ReadOneJNGImage): Fix SourceForge issue #530
	"heap-buffer-overflow in ReadOneJNGImage".  In this case there is
	a read one byte beyond the oFFs chunk allocation size due to an
	error in specifying an offset into the chunk.

	* coders/palm.c (ReadPALMImage): Fix SourceForge issue #529
	"global-buffer-overflow in ReadPALMImage".  This issue only
	occured in builds with QuantumDepth=8 due to the small range of
	IndexPacket.

2017-12-13  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* PerlMagick/{Magick.pm, Magick.pm.in, Makefile.PL.in}: Only base
	PerlMagick version on numeric portion of PACKAGE_VERSION.
